--- a/HotelManagementSystem.Api/appsettings.json
+++ b/HotelManagementSystem.Api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBCS": "server=.\\SQL2K19; Database=SSPM;Integrated Security=SSPI"
+    "DBCS": "server=.\\SQL2K19; Database=HMS;Integrated Security=SSPI"
   },
   "Serilog": {
     "MinimumLevel": "Error",
