--- a/HotelManagementSystem.BlazorWasm/HotelManagementSystem.BlazorWasm.csproj
+++ b/HotelManagementSystem.BlazorWasm/HotelManagementSystem.BlazorWasm.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Business\Business.csproj" />
+  </ItemGroup>
+
 </Project>
