Complete Image upload problem and add toaster message

--- a/HotelManagementSystem.Api/appsettings.json
+++ b/HotelManagementSystem.Api/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DBCS": "server=.\\SQL2K19; Database=HMS;Integrated Security=SSPI"
-    "DBCS": "server=SQL5053.site4now.net; Initial Catalog=DB_A5137A_Hotel;User Id=DB_A5137A_Hotel_admin;Password=Temp1234*"
+    "DBCS": "server=.\\SQL2K19; Database=HMS;Integrated Security=SSPI"
+    //"DBCS": "server=SQL5053.site4now.net; Initial Catalog=DB_A5137A_Hotel;User Id=DB_A5137A_Hotel_admin;Password=Temp1234*"
   },
   "Serilog": {
     "MinimumLevel": "Error",
@@ -17,8 +17,8 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          //"connectionString": "Server=.\\SQL2K19;Database=HMS;Integrated Security=SSPI",
-          "connectionString": "server=SQL5053.site4now.net; Initial Catalog=DB_A5137A_Hotel;User Id=DB_A5137A_Hotel_admin;Password=Temp1234*",
+          "connectionString": "Server=.\\SQL2K19;Database=HMS;Integrated Security=SSPI",
+          //"connectionString": "server=SQL5053.site4now.net; Initial Catalog=DB_A5137A_Hotel;User Id=DB_A5137A_Hotel_admin;Password=Temp1234*",
           "tableName": "ApplicationLog",
           "autoCreateSqlTable": true //this will create the required table automatically
         }
