Resolve few bugs

--- a/HotelManagementSystem.BlazorServer/appsettings.json
+++ b/HotelManagementSystem.BlazorServer/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBCS": "server=.\\SQL2K19; Database=HMS;Integrated Security=SSPI"
-    //"DBCS": "server=SQL5053.site4now.net; Initial Catalog=DB_A5137A_Hotel;User Id=DB_A5137A_Hotel_admin;Password=Temp1234*"
+    //"DBCS": "server=.\\SQL2K19; Database=HMS;Integrated Security=SSPI"
+    "DBCS": "server=SQL5053.site4now.net; Initial Catalog=DB_A5137A_Hotel;User Id=DB_A5137A_Hotel_admin;Password=Temp1234*"
   },
   "ImageUrl": "https://localhost:44314",
   "ServerUrl": "https://localhost:44314"
