remove DB connection string

--- a/HotelManagementSystem.Api/appsettings.json
+++ b/HotelManagementSystem.Api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBCS": "server=SQL5053.site4now.net; Initial Catalog=DB_A5137A_Hotel;User Id=DB_A5137A_Hotel_admin;Password=Temp1234*"
+    "DBCS": ""
   },
   "Serilog": {
     "MinimumLevel": "Error",
@@ -16,7 +16,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "server=SQL5053.site4now.net; Initial Catalog=DB_A5137A_Hotel;User Id=DB_A5137A_Hotel_admin;Password=Temp1234*",
+          "connectionString": "",
           "tableName": "ApplicationLog",
           "autoCreateSqlTable": true //this will create the required table automatically
         }
